istio-multi/overlays/cluster2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: istio-system
    topology.istio.io/network: network2
  name: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  finalizers:
  - kubernetes
